<resources>
    <string name="app_name">空了吹</string>
    <string name="empty" translatable="false"></string>
    <string name="user_profile" translatable="false">个人名片</string>
    <string name="login" translatable="false">登录</string>
    <string name="logining" translatable="false">登录中\u2026</string>
    <string name="register" translatable="false">注册</string>
    <string name="registering" translatable="false">注册中\u2026</string>
    <string name="agree" translatable="false">同意</string>
    <string name="reject" translatable="false">拒绝</string>
    <string name="network_is_not_available" translatable="false">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account" translatable="false">请输入帐号</string>
    <string name="login_hint_password" translatable="false">请输入密码</string>
    <string name="input_account" translatable="false">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip" translatable="false">帐号限20位字母或者数字</string>
    <string name="input_nickname" translatable="false">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip" translatable="false">昵称限10位汉字、字母或者数字</string>
    <string name="input_password" translatable="false">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip" translatable="false">密码必须为6~20位字母或者数字</string>
    <string name="register_success" translatable="false">注册成功</string>
    <string name="register_failed" translatable="false">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account" translatable="false">已有帐号？直接登录</string>
    <string name="done" translatable="false">完成</string>
    <string name="prepare_data" translatable="false">正在准备数据...</string>
    <string name="readed" translatable="false">已读</string>
    <string name="unread" translatable="false">未读</string>
    <string name="about" translatable="false">关于</string>
    <string name="logout" translatable="false">退出登录</string>
    <string name="add" translatable="false">添加</string>
    <string name="remove" translatable="false">移除</string>
    <string name="menu" translatable="false">菜单</string>
    <string name="verify_reminder" translatable="false">验证提醒</string>
    <string name="without_content" translatable="false">暂无</string>
    <string name="create" translatable="false">新建</string>
    <string name="delete_tip" translatable="false">删除提示</string>
    <string name="delete_system_message" translatable="false">删除该条系统消息？</string>
    <string name="delete_success" translatable="false">删除成功</string>
    <string name="clear_all_success" translatable="false">清空成功</string>
    <string name="login_failed" translatable="false">帐号或密码错误</string>
    <string name="login_exception" translatable="false">无效输入</string>
    <string name="file_browser" translatable="false">文件浏览器</string>
    <string name="now_allow_space" translatable="false">不能含有空格</string>
    <string name="search_advanced_team" translatable="false">搜索高级群</string>
    <string name="net_broken" translatable="false">当前网络不可用</string>
    <string name="nim_status_unlogin" translatable="false">未登录</string>
    <string name="nim_status_connecting" translatable="false">连接中...</string>
    <string name="nim_status_logining" translatable="false">登录中...</string>
    <string name="copyright" translatable="false">Copyright ©2013-2019 超然公司版权所有</string>
    <string name="user_not_exsit" translatable="false">该用户不存在</string>
    <string name="user_tips" translatable="false">请检查你输入的帐号是否正确</string>
    <string name="edit" translatable="false">编辑</string>
    <string name="input_panel_guess" translatable="false">猜 拳</string>
    <string name="input_panel_audio_call" translatable="false">语音通话</string>
    <string name="input_panel_video_call" translatable="false">视频通话</string>
    <string name="input_panel_file" translatable="false">发送文件</string>
    <string name="input_panel_snapchat" translatable="false">阅后即焚</string>
    <string name="input_panel_tip" translatable="false">Tip</string>
    <string name="input_panel_screen_capture" translatable="false">屏幕截屏</string>
    <string name="input_panel_ack_msg" translatable="false">已读回执</string>
    <string name="message_history_query" translatable="false">云消息记录</string>
    <string name="message_search_title" translatable="false">搜索本地消息记录</string>
    <string name="message_clear" translatable="false">清空本地消息记录</string>
    <string name="message_info" translatable="false">聊天信息</string>
    <string name="add_friend" translatable="false">加为好友</string>
    <string name="remove_friend" translatable="false">删除联系人</string>
    <string name="begin_chat" translatable="false">发消息</string>
    <string name="remove_friend_tip" translatable="false">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success" translatable="false">删除好友成功</string>
    <string name="add_friend_self_tip" translatable="false">不能添加自己为好友</string>
    <string name="add_friend_verify_tip" translatable="false">好友验证请求</string>
    <string name="black_list_tip" translatable="false">你不会接收到列表中联系人的任何消息</string>
    <string name="add_buddy" translatable="false">添加好友</string>
    <string name="create_normal_team" translatable="false">创建群</string>
    <string name="team_apply_sending" translatable="false">发送中…</string>
    <string name="no_team" translatable="false">您还没有群</string>
    <string name="no_normal_team" translatable="false">您还没有讨论组</string>
    <string name="team_search_hint" translatable="false">请输入群号进行搜索</string>
    <string name="team_number_not_exist" translatable="false">群号不存在</string>
    <string name="team_join" translatable="false">加入群组</string>
    <string name="team_join_success" translatable="false">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success" translatable="false">申请已发出</string>
    <string name="has_exist_in_team" translatable="false">已经在群里</string>
    <string name="team_num_limit" translatable="false">群数量已达上限</string>
    <string name="custom_notification" translatable="false">自定义通知</string>
    <string name="select_custom_notification_target" translatable="false">选择发送对象</string>
    <string name="send_custom_notification_tip" translatable="false">请输入要发送的内容</string>
    <string name="send_custom_notification_success" translatable="false">自定义通知发送成功</string>
    <string name="send_custom_notification_failed" translatable="false">自定义通知发送失败</string>
    <string name="send_custom_notification_to_buddy" translatable="false">发送给好友</string>
    <string name="send_custom_notification_to_team" translatable="false">发送给群组</string>
    <string name="location_navigate" translatable="false">导航</string>
    <string name="location_loading" translatable="false">正在定位</string>
    <string name="location_map" translatable="false">地图定位</string>
    <string name="my_location" translatable="false">我的位置</string>
    <string name="location_address_unkown" translatable="false">该位置信息暂无</string>
    <string name="format_mylocation" translatable="false">我的位置：%s</string>
    <string name="location_address_fail" translatable="false">获取位置信息失败</string>
    <string name="tools_selected" translatable="false">选择工具</string>
    <string name="friends_map_navigation_web" translatable="false">在网页中打开</string>
    <string name="location_open_map_error" translatable="false">打开地图出错</string>
    <string name="about_clear_msg_history" translatable="false">清空所有聊天记录</string>
    <string name="clear_msg_history_success" translatable="false">聊天记录已清空</string>
    <string name="clear_msg_cache_success" translatable="false">缓存已清空</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="settings" translatable="false">设置</string>
    <string name="no_disturb" translatable="false">免打扰</string>
    <string name="multiport_push" translatable="false">PC/Web在线推送</string>
    <string name="msg_notice" translatable="false">新消息通知</string>
    <string name="general_title" translatable="false">通用</string>
    <string name="msg_setting_top" translatable="false">聊天置顶</string>
    <string name="account_secret" translatable="false">账号与隐私</string>
    <string name="recent_sticky" translatable="false">消息置顶</string>
    <string name="setting_about" translatable="false">关于</string>
    <string name="setting_close" translatable="false">未开启</string>
    <string name="no_disturb_tips" translatable="false">开启后，手机将不再接收新消息通知</string>
    <string name="time_from" translatable="false">从</string>
    <string name="time_to" translatable="false">至</string>
    <string name="time_from_default" translatable="false">22:00</string>
    <string name="time_to_default" translatable="false">08:00</string>
    <string name="black_list" translatable="false">加入黑名单</string>
    <string name="clear_chat_history" translatable="false">清空聊天记录</string>
    <string name="msg_speaker" translatable="false">听筒模式</string>
    <string name="ring" translatable="false">声音</string>
    <string name="vibrate" translatable="false">振动</string>
    <string name="led" translatable="false">自定义呼吸灯</string>
    <string name="notice_content" translatable="false">通知栏标题定制</string>
    <string name="clear_index" translatable="false">清理全文检索缓存</string>
    <string name="clear_sdk_cache" translatable="false">清理SDK文件缓存</string>
    <string name="clear_cache" translatable="false">缓存设置</string>
    <string name="push_no_detail" translatable="false">推送不展示消息详情</string>
    <string name="operation_too_frequent" translatable="false">操作太频繁</string>
    <string name="multiport_manager" translatable="false">多端登录管理</string>
    <string name="multiport_logout" translatable="false">下线</string>
    <string name="computer_version" translatable="false">云信电脑版</string>
    <string name="web_version" translatable="false">云信网页版</string>
    <string name="mobile_version" translatable="false">云信移动版</string>
    <string name="multiport_logging" translatable="false">正在使用</string>
    <string name="kickout_notify" translatable="false">下线通知</string>
    <string name="kickout_content" translatable="false">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="on_line" translatable="false">在线</string>
    <string name="on_line_pc" translatable="false">PC在线</string>
    <string name="on_line_mac" translatable="false">Mac在线</string>
    <string name="on_line_web" translatable="false">web在线</string>
    <string name="client_aos" translatable="false">Android</string>
    <string name="client_ios" translatable="false">iOS</string>
    <string name="on_line_busy" translatable="false">忙碌</string>
    <string name="off_line" translatable="false">离线</string>
    <string name="snapchat_longclick_to_view" translatable="false">按住查看</string>
    <string name="birthday" translatable="false">生日</string>
    <string name="phone" translatable="false">电话</string>
    <string name="email" translatable="false">邮箱</string>
    <string name="signature" translatable="false">签名</string>
    <string name="home_tab_chat" translatable="false">空了吹</string>
    <string name="home_tab_contact" translatable="false">通讯录</string>
    <string name="home_tab_mine" translatable="false">我</string>
    <string name="mine_scan" translatable="false">扫一扫</string>
    <string name="mine_setting" translatable="false">设置</string>
    <string name="mine_alipay" translatable="false">支付宝红包</string>
    <string name="mine_help" translatable="false">帮助</string>
</resources>