<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:background="@color/color_f2f2f2"
        android:paddingLeft="14dp"
        android:paddingTop="5dp"
        android:text="@string/no_disturb_tips"
        android:textColor="@color/color_grey_999999"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/start_time_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/nim_semitransparency_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/time_from"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/start_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/time_from_default"
                android:textColor="@color/color_grey_999999"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <View
            style="@style/horizontal_light_thin_divider"
            android:layout_marginLeft="15dp" />

        <RelativeLayout
            android:id="@+id/end_time_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/nim_semitransparency_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/time_to"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/end_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/time_to_default"
                android:textColor="@color/color_grey_999999"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>