<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/color_be6913"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/main_add"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center_vertical"
                android:background=" ?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:src="@drawable/main_add_action" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <View
        android:id="@+id/main_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_d2d2d2"
        app:layout_constraintBottom_toTopOf="@+id/main_tab_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/main_tab_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_f8f7f6"
        android:checkedButton="@id/main_tab_chat"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/main_tab_chat"
                style="@style/MainTabStyle"
                android:drawableTop="@drawable/home_tab_chat_selector"
                android:text="@string/home_tab_chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/main_tab_contact"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.netease.nim.uikit.common.ui.drop.DropFake
                android:id="@+id/tab_new_chat_msg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/main_tab_chat"
                app:layout_constraintStart_toStartOf="@+id/main_tab_chat"
                app:layout_constraintTop_toTopOf="@+id/main_tab_chat" />

            <RadioButton
                android:id="@+id/main_tab_contact"
                style="@style/MainTabStyle"
                android:drawableTop="@drawable/home_tab_contact_selector"
                android:text="@string/home_tab_contact"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/main_tab_mine"
                app:layout_constraintStart_toEndOf="@+id/main_tab_chat"
                app:layout_constraintTop_toTopOf="parent" />

            <com.netease.nim.uikit.common.ui.drop.DropFake
                android:id="@+id/tab_new_contact_msg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/main_tab_contact"
                app:layout_constraintStart_toStartOf="@+id/main_tab_contact"
                app:layout_constraintTop_toTopOf="@+id/main_tab_contact" />

            <RadioButton
                android:id="@+id/main_tab_mine"
                style="@style/MainTabStyle"
                android:drawableTop="@drawable/home_tab_mine_selector"
                android:text="@string/home_tab_mine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/main_tab_contact"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </RadioGroup>


    <com.netease.nim.uikit.common.ui.drop.DropCover
        android:id="@+id/unread_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

</android.support.constraint.ConstraintLayout>